# RemoteLog

./: CMakeLists.txt  MessageClient.cpp  MessageClient.h  MessageServer.cpp  MessageServer.h  main.cpp  syncsub.c
client/: CMakeLists.txt  main.cpp
message/: Message.cpp  Message.h
server/: CMakeLists.txt  main.cpp
